--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,25 @@
 version: '3.8'
 
 services:
-  app:
+  backend:
     build: .
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000
     ports:
       - "8000:8000"
     volumes:
       - .:/app
+    networks:
+      - app_network
+
+  ui:
+    build: .
+    command: streamlit run app/ui.py --server.port=8501 --server.address=0.0.0.0
+    ports:
+      - "8501:8501"
+    volumes:
+      - .:/app
+    networks:
+      - app_network
+
+networks:
+  app_network:
